--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -36,19 +36,19 @@ It is Bayesian in the sense that I use probability models to arrive at conclusio
 It is applied and methodological in the sense that I am concerned with real world questions and the means to answer them.
 
 The real world questions relate to surveillance of the HIV epidemic in sub-Saharan Africa.
-Though important progress has been made, millions of people are impacted by HIV each year.
+Though progress has been made, millions of people are impacted by HIV each year.
 Quantifying the epidemic using statistics is an important part of the public health response, and the path towards disease control and elimination. 
 
-The data in this thesis are related to people answering survey questions or using healthcare facilities.
-The data have particular positions in space and time which are important to take into account.
-Spatio-temporal data, while encompassing a great diversity, has important and distinctive commonalities which make its collective study worthwhile.
+The data in this thesis relate to people answering survey questions or using healthcare facilities.
+As such, it has particular positions in space and time which should be taken into account.
+Spatio-temporal data, while encompassing a great diversity, has distinctive commonalities which make its collective study worthwhile.
 
 Computation is an essential part of modern statistical practice.
 Each project chapter is accompanied by code, hosted on GitHub.
 
 ## Chapter overview
 
-* Chapter \@ref(background): I start by reviewing the required background for the rest of the thesis, namely relating to the HIV/AIDS epidemic and Bayesian spatio-temporal statistics.
+* Chapter \@ref(background): I start by reviewing the required background for the rest of the thesis, namely regarding the HIV/AIDS epidemic and Bayesian spatio-temporal statistics.
 * Chapter \@ref(beyond-borders): The prevailing model for spatial structure used in small-area estimation [@besag1991bayesian] was designed with analysis of a grid of pixels in mind. In disease mapping, we work using the districts of a country, which are not a grid. I evaluate the practical consequences of this this concern [@howes2023beyond].
 * Chapter \@ref(multi-agyw): Adolescent girls and young women are a demographic group at disproportionate risk of HIV infection. The Global AIDS Strategy suggests prioritising interventions on the basis of behaviour to prevent the most new infections using available resources. I estimate the size of behavioural risk groups across priority countries to enable implementation of this strategy, and assess the potential benefits in terms of numbers of new infections prevented [@howes2023spatio].
 * Chapter \@ref(naomi-aghq): The Naomi small-area estimation model [@eaton2021naomi] is used by countries to estimate district-level HIV indicators. With this motivation, I develop an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis [@howes2023fast]. I apply the method to data from Malawi, and analyse the consequence of inference method choice for policy relevant outcomes. Further, I open the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
