--- a/02-background.Rmd
+++ b/02-background.Rmd
@@ -40,18 +40,24 @@ infections2021 <- 1500000
 ```
 
 <!-- What is HIV -->
-Human immunodeficiency virus (HIV) is a virus.
+Human immunodeficiency virus (HIV) is a retrovirus which infects humans.
+HIV primarily infects CD4+ T cells, a type of white blood cell vital for the function of the immune system.
 Over time, if left untreated HIV can progress to a more advanced stage known as acquired immunodeficiency syndrome (AIDS).
-HIV can be transmitted by exposure to certain bodily fluids, most commonly during sexual intercourse.
+AIDS is characterised by increased risk of developing infections normally controlled by the immune system.
+
+<!-- How is HIV transmitted -->
+HIV is transmitted by exposure to certain bodily fluids of an infected person.
+The most common mode of transmission is through sexual contact.
 
 <!-- The extent of HIV as a problem -->
-Though the HIV/AIDS epidemic began over forty years ago, it remains a major source of disease burden today.
+The first HIV cases were reported in the early 1980s.
 In 2021 there were `r xfun::numbers_to_words(plhiv2021)` people living with HIV, `r xfun::numbers_to_words(deaths2021)` AIDS-related deaths, and `r xfun::numbers_to_words(infections2021)` people newly infected with HIV [@unaids2021global].
 
 <!-- What is being done -->
 A major global effort has been made to address the epidemic.
 Significant progress has been made, both in reducing the number of new HIV cases and decreasing the number of AIDS related deaths (Figure \ref{fig:overall-picture}).
 Roll out of antiretroviral therapy (ART) has been a key tool.
+Treatment
 Other interventions include condoms, pre-exposure prophylaxis (PrEP) and post-exposure prophylaxis (PEP), and voluntary medical male circumcision (VMMC).
 
 ```{r overall-picture, fig.cap="Overall picture."}
@@ -59,36 +65,35 @@ knitr::include_graphics("figures/overall-picture.png")
 ```
 
 <!-- Uneven burden in space -->
-Disease burden is not evenly distributed geographically.
-The region most affected is Sub-Saharan Africa.
-Within sub-Saharan Africa, there is significant geographic heterogeneity.
+There is substantial geographic inequality in disease burden.
+In some countries, the epidemic is concentrated within small populations, and prevalence is low.
+For others, transmission is sustained in the general population, and prevalence is higher.
+Most of the countries severely affected are in sub-Saharan Africa (SSA), accounting for percentage of people living with HIV (PLHIV) worldwide.
+There is also significant geographic variation within countries.
 
 <!-- Uneven burden across people -->
-Disease burden is not evenly distributed across populations.
-Disproportionately impacted groups are sometimes referred to as key populations.
-Key populations include men who have sex with men (MSM), female sex workers (FSW), people who inject drugs (PWID), transgender people, and incarcerated people.
-Key populations are often marginalised, and face legal and social issues.
+In all settings, there is substantial inequality in disease burden across groups.
+Groups at increased risk of HIV infection are known as key populations (KPs), and include men who have sex with men (MSM), female sex workers (FSW), people who inject drugs (PWID), and transgender people (TGP).
+KPs are often marginalised, and face legal and social issues.
 
 <!-- How difuse is burden -->
-In sub-Saharan Africa, the epidemic is not as concentrated in key populations as in other contexts.
-Large demographic groups at higher risk include adolescent girls and young women.
+In SSA, risk is more diffuse across the population than in concentrated settings.
+Large demographic groups at increased risk of HIV infection include adolescent girls and young women (AGYW).
 
 <!-- Prioritisation of interventions  -->
-HIV interventions can be prioritised.
-Precision public health aims to get the right interventions, to the right population, in the right place, at the right time.
-Methods for prevention prioritisation include geographic, demographic, key population services, risk screening, and individual-level risk characteristics.
+HIV interventions should be prioritised to have the greatest impact on the epidemic.
+The precision public health paradigm aims to get the right interventions, to the right populations, in the right place, at the right time.
+<!-- Methods for prevention prioritisation include geographic, demographic, key population services, risk screening, and individual-level risk characteristics. -->
 
 <!-- What is surveillance and how can it be used to meet these needs -->
-Surveillance is used to track epidemic trends, identify at-risk populations, find drivers of transmission, and evaluate the impact of prevention and treatment programs.
-HIV prevalence is the proportion of the population who have HIV.
-HIV incidence is the rate of new HIV infections.
-ART coverage is the proprotion of people living with HIV who are on ART.
+HIV surveillance refers to the collection, analysis, interpretation and dissemination of data relating to HIV/AIDS.
+Surveillance can used to track epidemic indicators, identify at-risk populations, find drivers of transmission, and evaluate the impact of prevention and treatment programs.
+Important indicators include HIV prevalence, which is the proportion of the population who have HIV; HIV incidence, the rate of new HIV infections; and ART coverage, which is the proportion of PLHIV who are on ART.
 
 <!-- Why is surveillance difficult -->
 There are significant difficulties associated with furnishing these estimates.
-These include sparsity in space and time, survey bias, conflicting information sources, hard to reach populations, changing demographics.
-These data limitations foreground the importance of synthesising multiple sources of information to obtain estimates.
-Doing so increases the complexity of the statistical models used.
+The difficulties include data sparsity in space and time, survey bias, conflicting information sources, hard to reach populations, and changing demographics.
+These data limitations foreground the importance of statistical modelling, including synthesising multiple sources of information.
 
 <!-- Future trends in surveillance -->
 Aims for HIV response going forward, and surveillance capabilities are needed to meet them.
@@ -142,7 +147,7 @@ As computation improves, the space of models available to the analyst expands.
 
 In spatio-temporal statistics [@cressie2015statistics] we observe data indexed by spatial or temporal location.
 In this thesis we assume that the spatial study region $\mathcal{S} \subseteq \mathbb{R}^2$ has two dimensions, corresponding to latitude and longitude.
-Data may be associated to a point in space $s \in \mathcal{S}$ or an area $A \subseteq \mathcal{S}$.
+Data may be associated to a point $s \in \mathcal{S}$ or area $A \subseteq \mathcal{S}$ in the study region.
 The temporal study period $\mathcal{T} \subseteq \mathbb{R}$ can more generally be assumed to be one dimensional.
 
 Commonly used independent and identically distributed (IID) assumptions on observations are rarely suitable in this setting because we expect there to be spatio-temporal correlation structure.
